--- a/ConsoleApplication1/ConsoleApplication1/App.config
+++ b/ConsoleApplication1/ConsoleApplication1/App.config
@@ -4,5 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
       abcd2
       abcd1
+      other change
     </startup>
 </configuration>
