--- a/ConsoleApplication1/ConsoleApplication1/App.config
+++ b/ConsoleApplication1/ConsoleApplication1/App.config
@@ -4,6 +4,16 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
       abcd2
       abcd1
+
       other change
+
+      ghy
+      dhdffld
+      lkjlkj
+      1
+      2
+      3
+      456
+
     </startup>
 </configuration>
