--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vbproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vbproj
@@ -84,6 +84,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="NewFolder1\Class1.vb" />
+    <Compile Include="NewFolder1\Class2.vb" />
+    <Compile Include="NewFolder1\Class3.vb" />
     <Compile Include="UserControl1.Designer.vb">
       <DependentUpon>UserControl1.vb</DependentUpon>
     </Compile>
