--- a/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vbproj
+++ b/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.vbproj
@@ -87,6 +87,7 @@
     <Compile Include="NewFolder1\Class1.vb" />
     <Compile Include="NewFolder1\Class2.vb" />
     <Compile Include="NewFolder1\Class3.vb" />
+    <Compile Include="NewFolder1\Class4.vb" />
     <Compile Include="UserControl1.Designer.vb">
       <DependentUpon>UserControl1.vb</DependentUpon>
     </Compile>
